--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "eslint": "^9.11.1",
     "eslint-plugin-powerbi-visuals": "^1.0.0",
     "happy-dom": "^20.5.0",
+    "less": "^4.5.1",
+    "powerbi-visuals-utils-testutils": "^6.1.1",
     "sharp": "^0.34.5",
     "typescript": "5.5.4",
     "vitest": "^4.0.18"
